--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,4 @@ jobs:
     - run: npm ci --prefix clients/team
     - run: npm ci --prefix clients/master
     - run: npm ci --prefix clients/scoreboard
-    - run: ./build.sh
+    - run: build.sh
