--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,7 @@ jobs:
     - run: npm ci --prefix clients/team
     - run: npm ci --prefix clients/master
     - run: npm ci --prefix clients/scoreboard
-    - run: build.sh
+    - run: npm run build --prefix clients/shared
+    - run: npm run build --prefix clients/team
+    - run: npm run build --prefix clients/master
+    - run: npm run build --prefix clients/scoreboard
