--- a/clients/team/package.json
+++ b/clients/team/package.json
@@ -10,6 +10,9 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "bootstrap": "^4.5.3",
+    "node-sass": "^4.14.1",
+    "react-bootstrap": "^1.3.0",
     "redux": "^4.0.5"
   },
   "scripts": {
