--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci --prefix clients/shared
-    - run: npm run build --prefix clients/shared
+    - run: npm run build:linux --prefix clients/shared
     - run: npm ci --prefix clients/team
     - run: npm ci --prefix clients/master
     - run: npm ci --prefix clients/scoreboard
