--- a/clients/shared/package.json
+++ b/clients/shared/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "scripts": {
     "babelBuild": "babel src --out-dir dist",
+    "build:linux": "npm run babelBuild && cp package.json dist",
     "build": "npm run babelBuild && copy package.json dist"
   },
   "dependencies": {
