--- a/clients/shared/package.json
+++ b/clients/shared/package.json
@@ -6,9 +6,10 @@
   "author": "Erik Knaake (598368)",
   "license": "ISC",
   "scripts": {
-    "babelBuild": "babel src --out-dir dist",
+    "babelBuild": "babel src --out-dir dist --copy-files",
     "build:linux": "npm run babelBuild && cp package.json dist",
-    "build": "npm run babelBuild && copy package.json dist"
+    "build": "npm run babelBuild && copy package.json dist",
+    "watch": "babel src --out-dir dist --copy-files --watch"
   },
   "dependencies": {
     "immer": "^7.0.9",
