--- a/clients/scoreboard/package.json
+++ b/clients/scoreboard/package.json
@@ -16,10 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "shared": "file:../shared/dist",
-    "bootstrap": "^4.5.3",
-    "node-sass": "^4.14.1",
-    "react-bootstrap": "^1.3.0"
+    "shared": "file:../shared/dist"
   },
   "scripts": {
     "start": "react-scripts start",
