--- a/clients/master/package.json
+++ b/clients/master/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "shared": "file:../shared/dist"
+    "shared": "file:../shared/dist",
+    "websocketevents": "file:../../websocketEvents"
   },
   "scripts": {
     "start": "react-scripts start",
