--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.10.8",
-    "websocketevents": "file:../websocketEvents",
+    "websocketevents": "file:../websocket-events",
     "ws": "^7.3.1"
   },
   "devDependencies": {
