unifiy module naming

--- a/websocket-events/package.json
+++ b/websocket-events/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websocketevents",
+  "name": "websocket-events",
   "module": "index.js",
   "version": "1.0.0",
   "description": "All websockets events of Quizzer",
