--- a/clients/master/package.json
+++ b/clients/master/package.json
@@ -17,7 +17,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "shared": "file:../shared/dist",
-    "websocketevents": "file:../../websocket-events"
+    "websocket-events": "file:../../websocket-events"
   },
   "scripts": {
     "start": "react-scripts start",
