--- a/clients/shared/package.json
+++ b/clients/shared/package.json
@@ -12,11 +12,12 @@
     "watch": "babel src --out-dir dist --copy-files --watch"
   },
   "dependencies": {
-    "immer": "^7.0.9",
-    "react": "^16.13.1",
     "bootstrap": "^4.5.3",
+    "immer": "^7.0.9",
     "node-sass": "^4.14.1",
-    "react-bootstrap": "^1.3.0"
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-redux": "^7.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
