--- a/clients/team/package.json
+++ b/clients/team/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "history": "^4.10.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -16,7 +17,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "shared": "file:../shared/dist"
+    "shared": "file:../shared/dist",
+    "websocket-events": "file:../../websocket-events"
   },
   "scripts": {
     "start": "react-scripts start",
