--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "start:prod": "set NODE_ENV=production && nodemon index.js"
+    "start:prod": "set NODE_ENV=production && nodemon index.js",
+    "seed": "node seed.js",
+    "seed:clean": "set CLEAN=true && node seed.js"
   },
   "author": "Erik Knaake",
   "license": "ISC",
