--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "mongoose": "^5.10.8",
     "websocket-events": "file:../websocket-events",
+    "roles": "file:../roles",
     "ws": "^7.3.1"
   },
   "devDependencies": {
