--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.10.8",
     "websocket-events": "file:../websocket-events",
     "roles": "file:../roles",
+    "shared-constants": "file:../shared-constants",
     "ws": "^7.3.1"
   },
   "devDependencies": {
