--- a/clients/scoreboard/package.json
+++ b/clients/scoreboard/package.json
@@ -17,9 +17,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "shared": "file:../shared/dist",
-    "websocket-events": "file:../../websocket-events",
-    "roles": "file:../../roles"
+    "shared": "file:../shared/dist"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "/scoreboard",
   "eslintConfig": {
     "extends": "react-app"
   },
