full test master except end page

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "shared-constants": "file:../shared-constants"
+  },
   "devDependencies": {
     "cypress": "^5.5.0"
   }
